Adding architecture diagram

--- a/templates/rancher.template.yaml
+++ b/templates/rancher.template.yaml
@@ -555,3 +555,6 @@ Resources:
         Ref: "SSMWaitHandle"
       Timeout: "3600"
       Count: 1
+Outputs:
+  DomainName:
+    Value: !Ref DomainName
