changed the default DomainName from rancher.aws.private to aws.private

--- a/templates/rancher.template.yaml
+++ b/templates/rancher.template.yaml
@@ -89,7 +89,7 @@ Parameters:
   DomainName:
     Description: DNS domain name that users can use to access the Rancher console.
     Type: String
-    Default: rancher.aws.private
+    Default: aws.private
 
 Conditions:
   NoDomainSpecified: !Equals [ !Ref DomainName, '' ]
