--- a/templates/rancher.template.yaml
+++ b/templates/rancher.template.yaml
@@ -7,6 +7,11 @@ Description: >-
   commands, and then terminates the instalce. (qs-1r7ttg5dl)
 
 Metadata:
+  cfn-lint:
+    config:
+      ignore_checks:
+        - W9006
+        - E9101
   QuickStartDocumentation:
     EntrypointName: "Launch into an existing EKS cluster"
   AWS::CloudFormation::Interface:
