Expanding IAM role permissions

--- a/templates/rancher.template.yaml
+++ b/templates/rancher.template.yaml
@@ -305,9 +305,7 @@ Resources:
                         - Action:
                             - s3:GetObject
                             - s3:ListBucket
-                          Resource: !Sub
-                            - arn:${AWS::Partition}:s3:::${S3Bucket}/${QSS3KeyPrefix}*
-                            - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+                          Resource: '*'
                           Effect: Allow
                     Roles:
                     - !Ref IAMRole
